force-app/main/default/objects/leaseworks__Loan_Agreement__c/leaseworks__Loan_Agreement__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Loan Agreement</label>
    <nameField>
        <label>Loan Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>