force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Aircraft_Cost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Cost__c</fullName>
    <label>Aircraft Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>