force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__End_of_free_cashflow_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_of_free_cashflow_Date__c</fullName>
    <label>End of free cashflow Date</label>
    <type>Date</type>
</CustomField>