force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Fee_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fee_1_Amount__c</fullName>
    <label>Fee 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>