force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Interest_Base__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Base__c</fullName>
    <label>Interest Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple ACT/360</fullName>
            </value>
            <value>
                <fullName>Simple 30/360</fullName>
            </value>
            <value>
                <fullName>Simple ACT/365</fullName>
            </value>
            <value>
                <fullName>Simple ACT/366</fullName>
            </value>
            <value>
                <fullName>Simple ACT/ACT</fullName>
            </value>
            <value>
                <fullName>Compound ACT/360</fullName>
            </value>
            <value>
                <fullName>Compound 30/360</fullName>
            </value>
            <value>
                <fullName>Compound ACT/365</fullName>
            </value>
            <value>
                <fullName>Compound ACT/366</fullName>
            </value>
            <value>
                <fullName>Compound ACT/ACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>