force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Loan Agreements</relationshipLabel>
    <relationshipName>Loan_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>