force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Loan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Loan_End_Date__c</fullName>
    <label>Loan End Date</label>
    <type>Date</type>
</CustomField>