force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Placement</fullName>
            </value>
            <value>
                <fullName>Registered offering</fullName>
            </value>
            <value>
                <fullName>Non-Bank Financing</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Dry Lease</fullName>
            </value>
            <value>
                <fullName>Japanese Operating Lease Call Option (JOLCO)</fullName>
            </value>
            <value>
                <fullName>Kommanditgesellschaft (KG)</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Government-guaranteed security (ECA)</fullName>
            </value>
            <value>
                <fullName>Corporate Debt Security/Capital Market</fullName>
            </value>
            <value>
                <fullName>Islamic Finance</fullName>
                <isActive>false</isActive>
                <label>Islamic Finance</label>
            </value>
            <value>
                <fullName>Orphan Trust Structure</fullName>
                <isActive>false</isActive>
                <label>Orphan Trust Structure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>