force-app/main/default/objects/leaseworks__Loan_Agreement__c/fields/leaseworks__Residual_Value_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Residual_Value_Purchase_Price__c</fullName>
    <label>Residual Value / Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>