force-app/main/default/objects/leaseworks__Loan_Agreement__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Loan_Type__c</columns>
    <columns>leaseworks__Asset__c</columns>
    <columns>leaseworks__Loan_Amount__c</columns>
    <columns>leaseworks__Loan_Start_Date__c</columns>
    <columns>leaseworks__Loan_End_Date__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Lender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>